crates/ruau/tests/compile/async_nonstatic_userdata.stderr
error[E0282]: type annotations needed
  --> tests/compile/async_nonstatic_userdata.rs:9:51
   |
 9 |             methods.add_async_method("print", |_, data, ()| async move {
   |                                                   ^^^^
10 |                 println!("{}", data.0);
   |                                ---- type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
 9 |             methods.add_async_method("print", |_, data: /* Type */, ()| async move {
   |                                                       ++++++++++++
